--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dcf-calculator",
   "version": "0.1.0",
-  "homepage": "https://github.com/amiyasahu/simple-dcf-calculator",
+  "homepage": "simple-dcf-calculator",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
